Corrected link path

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "devDependencies": {
     "gh-pages": "^6.3.0"
   },
-  "homepage": "https://your-HadiaMushtaq-Dev.github.io/ai-image-generator"
+  "homepage": "https://HadiaMushtaq-Dev.github.io/ai-image-generator"
 
 
 }
